# grill-stats

./: .dockerignore  .env.example  .gitignore  .mypy.ini  .pre-commit-config.yaml  ALERT_SYSTEM_IMPLEMENTATION_REPORT.md  API_GATEWAY_IMPLEMENTATION.md  AUTH_IMPLEMENTATION.md  CI_CD_PIPELINE_DOCUMENTATION.md  CLAUDE.md  DATABASE-MODELS.md  DOCKER-SETUP.md  DOCKER_DEPLOYMENT.md  FEATURES.md  FINAL_INTEGRATION_TEST.sh  LOCAL_TESTING_SUMMARY.md  MOCK.md  MOCK_MODE_ENHANCEMENTS.md  MODEL_REFACTORING_SUMMARY.md  PARALLEL-TEST-PLAN.md  PLANNING.md  PRODUCTION_CHECKLIST.md  README.md  RESULTS.md  SECURE_CI_CD_IMPLEMENTATION_SUMMARY.md  SECURE_CREDENTIAL_STORAGE_DOCUMENTATION.md  SESSION_TRACKING_IMPLEMENTATION.md  TASKS.md  TEST-REFACTOR.md  TESTING-AND-IMPLEMENTATION.md  TEST_EXECUTION.md  THERMOWORKS_ARCHITECTURE.md  TRACK1_API_CORE.sh  TRACK2_THERMOWORKS.sh  TRACK3_HA_STORAGE.sh  TRACK4_PERFORMANCE.sh  TRACK5_SECURITY_UI.sh  USER_STORY_2_README.md  USER_STORY_3_IMPLEMENTATION.md  USER_STORY_4_IMPLEMENTATION.md  (+55 more)
.claude/: settings.local.json
.gitea/: branch-protection.yml
api/: __init__.py  devices.py
auth/: Dockerfile  README.md  __init__.py  auth_service.py  jwt_middleware.py  requirements.txt  routes.py  utils.py
config/: __init__.py
config_package/: __init__.py  config_loader.py  env_validator.py
database-backup/: README.md  crontab  influxdb-backup.sh  k8s-backup-scripts.yaml  k8s-influxdb-backup.yaml  k8s-pvc.yaml  k8s-rb.yaml  k8s-redis-backup.yaml  k8s-role.yaml  k8s-sa.yaml  postgres-backup.sh  redis-backup.sh  redis.conf  replication-config-primary.yaml  replication-docs.yaml  replication-scripts.yaml
database-init/: add_temperature_alerts_table.sql  add_thermoworks_credentials_table.sql  add_user_device_relation.sql  create_grilling_sessions_table.sql  fix-postgres-schema.sql  influxdb-init.sh  live-data-schema.sql  migrate-to-encrypted-credentials.sql  postgres-init.sql  setup-encrypted-credentials.sql  timescale-init.sql
database-monitoring/: README.md  SUMMARY.md
deployment/: README.md
docs/: ci-cd-pipeline.md  ci-cd-secret-management.md  connection_pooling_testing.md  (+8 more)
(+760 files in other folders)
